<?xml version="1.0" encoding="utf-8"?><!--
  ~ The contents of this file are subject to the OpenMRS Public License
  ~ Version 1.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~ http://license.openmrs.org
  ~
  ~ Software distributed under the License is distributed on an "AS IS"
  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing rights and limitations
  ~ under the License.
  ~
  ~ Copyright (C) OpenMRS, LLC.  All Rights Reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/locationLoadingProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/openmrsLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/openmrs_logo"
            app:srcCompat="@drawable/logo_blopup"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationLoadingProgressBar" />

        <LinearLayout
            android:id="@+id/loginFormView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/openmrsLogo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/textInputLayoutLoginURL"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="25dp"
                android:visibility="visible"
                android:background="@drawable/login_rectangle">

                <ImageView
                    android:id="@+id/draw_pencil"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="12dp"
                    app:srcCompat="@drawable/login_draw"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

                <View
                    android:id="@+id/view"
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    android:layout_margin="12dp"
                    android:background="@color/dark_grey_10x"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/draw_pencil"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/loginUrlField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@color/transparent"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textColorHint="@color/dark_grey_10x"
                    android:textStyle="bold"
                    android:hint="@string/url_server_list"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/view"
                    app:layout_constraintTop_toTopOf="parent"
                    android:autofillHints="url" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_rectangle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginUsernameField"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/dark_grey_8x"
                    android:textColorHint="@color/dark_grey_8x" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_rectangle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/dark_grey_8x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordField"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:inputType="textPassword|text"
                    android:maxLines="1"
                    android:textColor="@color/dark_grey_8x"
                    android:textColorHint="@color/dark_grey_8x" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/locationSpinner"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_spinner"
                android:gravity="center_vertical" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="@dimen/padding_16"
                android:textColor="@color/white"
                android:enabled="false"
                android:gravity="center_vertical|center_horizontal"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/login_button" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/aboutUsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="30dp"
                android:text="@string/get_started_with_our_user_guide"
                android:textColor="@color/color_accent"
                />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loginLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginFormView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
